feat: structured value (ptototype)
