# cmd/immugw/swagger-ui/schema.swagger.json
@@ -13,12 +13,12 @@
   "paths": {
     "/v1/immurestproxy/batch/get": {
       "post": {
-        "operationId": "GetBatch",
+        "operationId": "GetBatchSV",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/schemaItemList"
+              "$ref": "#/definitions/schemaStructuredItemList"
             }
           },
           "default": {
@@ -45,7 +45,7 @@
     },
     "/v1/immurestproxy/batch/set": {
       "post": {
-        "operationId": "SetBatch",
+        "operationId": "SetBatchSV",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -66,7 +66,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/schemaKVList"
+              "$ref": "#/definitions/schemaSKVList"
             }
           }
         ],
@@ -130,12 +130,12 @@
     },
     "/v1/immurestproxy/history/{key}": {
       "get": {
-        "operationId": "History",
+        "operationId": "HistorySV",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/schemaItemList"
+              "$ref": "#/definitions/schemaStructuredItemList"
             }
           },
           "default": {
@@ -192,7 +192,7 @@
     },
     "/v1/immurestproxy/item": {
       "post": {
-        "operationId": "Set",
+        "operationId": "SetSV",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -213,7 +213,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/schemaUnstructuredKeyValue"
+              "$ref": "#/definitions/schemaStructuredKeyValue"
             }
           }
         ],
@@ -255,12 +255,12 @@
     },
     "/v1/immurestproxy/item/index/{index}": {
       "get": {
-        "operationId": "ByIndex",
+        "operationId": "ByIndexSV",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/schemaItem"
+              "$ref": "#/definitions/schemaStructuredItem"
             }
           },
           "default": {
@@ -286,7 +286,7 @@
     },
     "/v1/immurestproxy/item/safe": {
       "post": {
-        "operationId": "SafeSet",
+        "operationId": "SafeSetSV",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -307,7 +307,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/schemaSafeSetOptions"
+              "$ref": "#/definitions/schemaSafeSetSVOptions"
             }
           }
         ],
@@ -318,12 +318,12 @@
     },
     "/v1/immurestproxy/item/safe/get": {
       "post": {
-        "operationId": "SafeGet",
+        "operationId": "SafeGetSV",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/schemaSafeItem"
+              "$ref": "#/definitions/schemaSafeStructuredItem"
             }
           },
           "default": {
@@ -350,12 +350,12 @@
     },
     "/v1/immurestproxy/item/scan": {
       "post": {
-        "operationId": "Scan",
+        "operationId": "ScanSV",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/schemaItemList"
+              "$ref": "#/definitions/schemaStructuredItemList"
             }
           },
           "default": {
@@ -382,12 +382,12 @@
     },
     "/v1/immurestproxy/item/{key}": {
       "get": {
-        "operationId": "Get",
+        "operationId": "GetSV",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/schemaItem"
+              "$ref": "#/definitions/schemaStructuredItem"
             }
           },
           "default": {
@@ -439,16 +439,13 @@
       "type": "object",
       "properties": {
         "type_url": {
-          "type": "string",
-          "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. This string must contain at least\none \"/\" character. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
+          "type": "string"
         },
         "value": {
           "type": "string",
-          "format": "byte",
-          "description": "Must be a valid serialized protocol buffer of the above specified type."
+          "format": "byte"
         }
-      },
-      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := ptypes.MarshalAny(foo)\n     ...\n     foo := \u0026pb.Foo{}\n     if err := ptypes.UnmarshalAny(any, foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+      }
     },
     "runtimeError": {
       "type": "object",
@@ -496,6 +493,19 @@
             "type": "string",
             "format": "byte"
           }
+        }
+      }
+    },
+    "schemaContent": {
+      "type": "object",
+      "properties": {
+        "timestamp": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "payload": {
+          "type": "string",
+          "format": "byte"
         }
       }
     },
@@ -552,8 +562,9 @@
           "type": "string",
           "format": "byte"
         },
-        "sv": {
-          "$ref": "#/definitions/schemaStructuredValue"
+        "value": {
+          "type": "string",
+          "format": "byte"
         },
         "index": {
           "type": "string",
@@ -620,7 +631,8 @@
           "format": "byte"
         },
         "value": {
-          "$ref": "#/definitions/protobufAny"
+          "type": "string",
+          "format": "byte"
         }
       }
     },
@@ -672,6 +684,17 @@
         }
       }
     },
+    "schemaSKVList": {
+      "type": "object",
+      "properties": {
+        "KVs": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/schemaStructuredKeyValue"
+          }
+        }
+      }
+    },
     "schemaSafeGetOptions": {
       "type": "object",
       "properties": {
@@ -694,14 +717,25 @@
         }
       }
     },
-    "schemaSafeSetOptions": {
+    "schemaSafeSetSVOptions": {
       "type": "object",
       "properties": {
-        "kv": {
-          "$ref": "#/definitions/schemaKeyValue"
+        "skv": {
+          "$ref": "#/definitions/schemaStructuredKeyValue"
         },
         "rootIndex": {
           "$ref": "#/definitions/schemaIndex"
+        }
+      }
+    },
+    "schemaSafeStructuredItem": {
+      "type": "object",
+      "properties": {
+        "item": {
+          "$ref": "#/definitions/schemaStructuredItem"
+        },
+        "proof": {
+          "$ref": "#/definitions/schemaProof"
         }
       }
     },
@@ -726,20 +760,7 @@
         }
       }
     },
-    "schemaStructuredValue": {
-      "type": "object",
-      "properties": {
-        "timestamp": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "payload": {
-          "type": "string",
-          "format": "byte"
-        }
-      }
-    },
-    "schemaUnstructuredKeyValue": {
+    "schemaStructuredItem": {
       "type": "object",
       "properties": {
         "key": {
@@ -747,8 +768,34 @@
           "format": "byte"
         },
         "value": {
+          "$ref": "#/definitions/schemaContent"
+        },
+        "index": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "schemaStructuredItemList": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/schemaStructuredItem"
+          }
+        }
+      }
+    },
+    "schemaStructuredKeyValue": {
+      "type": "object",
+      "properties": {
+        "key": {
           "type": "string",
           "format": "byte"
+        },
+        "value": {
+          "$ref": "#/definitions/schemaContent"
         }
       }
     }
